[package]
name = "gog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"

reqwest = { version = "0.11.9", features = ["blocking", "json"]}
thiserror = "1.0.30"
directories = "4.0.1"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }




[lib]
name = "gog"
path = "src/lib/mod.rs"
