[package]
name = "gog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
authors = ["Haider <haideremailsender122@gmail.com>"]
keywords = ["cli", "google", "cli-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"

reqwest = { version = "0.11.9", features = ["blocking", "json"]}
thiserror = "1.0.30"
directories = "4.0.1"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
open = "2.0.2"
dialoguer = "0.9.0"
console = "0.15.0"




[lib]
name = "gog"
path = "src/lib/mod.rs"
