[package]
description = "Search on google from your terminal"
name = "goog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
authors = ["Haider <haideremailsender122@gmail.com>"]
keywords = ["cli", "google", "cli-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"


thiserror = "1.0.30"
directories = "4.0.1"

open = "2.0.2"
dialoguer = "0.9.0"
console = "0.15.0"




[lib]
name = "goog"
path = "src/lib/mod.rs"
